compiler/tests/fixtures/valid/sifting_pattern.viv
// Sifting pattern with roles, actions, and conditions

action betray:
    roles:
        @betrayer:
            as: initiator
        @victim:
            as: recipient


action steal:
    roles:
        @thief:
            as: initiator
        @target:
            as: recipient


pattern betrayal-pattern:
    roles:
        @perpetrator:
            as: character
        @injured-party:
            as: character
    actions:
        @act1:
            from: @perpetrator.memories
        @act2:
            from: @injured-party.memories
    conditions:
        @perpetrator != @injured-party
